# octo-rpc

./: README.md
dorado/: .gitignore  README.md  pom.xml
dorado/dorado-build/: pom.xml
dorado/dorado-common/: pom.xml
dorado/dorado-common/src/test/resources/: dorado-application.properties  log4j2.xml
dorado/dorado-core/: pom.xml
dorado/dorado-core-default/: pom.xml
dorado/dorado-core-default/src/test/resources/: log4j2.xml
dorado/dorado-demo/: pom.xml
dorado/dorado-demo/src/test/resources/: log4j2.xml
dorado/dorado-demo/src/test/resources/thrift/: echo.thrift  hello.thrift
dorado/dorado-demo/src/test/resources/thrift/annotation/: thrift-consumer.xml  thrift-provider.xml
dorado/dorado-demo/src/test/resources/thrift/async/: thrift-consumer-async.xml  thrift-provider-async.xml
dorado/dorado-demo/src/test/resources/thrift/multiport/: thrift-consumer-multiapi.xml  thrift-provider-multiport.xml
dorado/dorado-demo/src/test/resources/thrift/multirole/: thrift-multiroles.xml
dorado/dorado-demo/src/test/resources/thrift/simple/: thrift-consumer.xml  thrift-provider.xml
dorado/dorado-demo/src/test/resources/thrift/zkmock/: thrift-consumer.xml  thrift-provider.xml
dorado/dorado-demo/src/test/resources/thrift/zkregistry/: thrift-consumer.xml  thrift-provider.xml
dorado/dorado-doc/: Introduce.md  Manual.md  QuickStart.md
dorado/dorado-doc/img/: ThriftFileExample.tiff
dorado/dorado-doc/manual-developer/: Compile.md  Extension.md  Version.md
dorado/dorado-doc/manual-thrift/: ThriftSpecification.md
dorado/dorado-doc/manual-thrift/api/: HelloService.java
dorado/dorado-doc/manual-user/: Config.md  DirectInvoke.md  Filter.md  LoadBalance.md  MethodTimeout.md  Port2MultiService.md  Protocol.md  Registry.md  ShutdownGracefully.md  Trace.md  WeightWarmUp.md
dorado/dorado-protocol/: pom.xml
dorado/dorado-protocol/dorado-protocol-octo/: pom.xml
dorado/dorado-registry/: pom.xml
dorado/dorado-registry/dorado-registry-mns/: pom.xml
dorado/dorado-registry/dorado-registry-mns/src/test/resources/: thrift-provider.xml
dorado/dorado-registry/dorado-registry-mock/: pom.xml
dorado/dorado-registry/dorado-registry-zookeeper/: pom.xml
dorado/dorado-test/: pom.xml
dorado/dorado-test/dorado-benchmark-client/: pom.xml
dorado/dorado-test/dorado-benchmark-client/script/: run.sh
dorado/dorado-test/dorado-benchmark-client/src/main/resources/: log4j2.xml
dorado/dorado-test/dorado-benchmark-client/src/main/resources-remote/: log4j2.xml
dorado/dorado-test/dorado-benchmark-server/: pom.xml
dorado/dorado-test/dorado-benchmark-server/script/: run.sh
dorado/dorado-test/dorado-benchmark-server/src/main/resources/: log4j2.xml
dorado/dorado-test/dorado-benchmark-server/src/main/resources-remote/: log4j2.xml
dorado/dorado-test/dorado-test-api/: pom.xml
dorado/dorado-test/dorado-test-benchmark/: pom.xml
dorado/dorado-test/dorado-test-benchmark/src/test/resources/: context.xml  service.thrift
dorado/dorado-test/dorado-test-client/: pom.xml
dorado/dorado-test/dorado-test-client/script/: run.sh
dorado/dorado-test/dorado-test-client/src/main/resources/: log4j2.xml
dorado/dorado-test/dorado-test-integration/: pom.xml
dorado/dorado-test/dorado-test-server/: pom.xml
dorado/dorado-test/dorado-test-server/script/: run.sh
dorado/dorado-test/dorado-test-server/src/main/resources/: log4j2.xml
dorado/dorado-trace/: pom.xml
dorado/dorado-trace/dorado-trace-cat/: pom.xml
dorado/dorado-trace/dorado-trace-cat/src/test/resources/: log4j2.xml
dorado/dorado-transport/: pom.xml
dorado/dorado-transport/dorado-transport-httpnetty/: pom.xml
dorado/dorado-transport/dorado-transport-netty/: pom.xml
whale/: CMakeLists.txt  README.md  build.sh
whale/cmake/: CMakeLists.download_gtest.in  DonwloadMuduo.cmake  FindGtest.cmake  FindMuduo.cmake  FindThrift.cmake  SetupGtest.cmake  module.cmake
whale/cthrift/: CMakeLists.txt  cthrift_async_callback.h  cthrift_client.cc  cthrift_client.h  cthrift_client_channel.cc  cthrift_client_channel.h  cthrift_client_worker.cc  cthrift_client_worker.h  cthrift_name_service.cc  cthrift_name_service.h  cthrift_svr.cc  cthrift_svr.h  cthrift_tbinary_protocol.h  cthrift_tbinary_protocol.tcc  cthrift_transport.cc  cthrift_transport.h
whale/cthrift/tests/: CMakeLists.txt  conf.json  cthrift_channel_unittest.cc  cthrift_client_unittest.cc  cthrift_client_worker_unittest.cc  cthrift_common_unittest.cc  cthrift_server_unittest.cc  cthrift_sg_agent_unittest.cc  cthrift_transport_unittest.cc  cthrift_util_zk_tools_unittest.cc  echo.thrift  log4cplus.conf  main.cc  main_all.cc  main_async.cc  main_svr.cc
whale/cthrift/tests/echo/: Echo.cpp  Echo.h  Echo_async_server.skeleton.cpp  Echo_server.skeleton.cpp  echo_constants.h  echo_types.cpp  echo_types.h
whale/cthrift/util/: cthrift_common.cc  cthrift_common.h  cthrift_config.cc  cthrift_config.h  cthrift_mns_imp.cc  cthrift_mns_imp.h  cthrift_ns_imp.cc  cthrift_ns_imp.h  cthrift_ns_interface.h  cthrift_zk_client.cc  cthrift_zk_client.h  log4cplus.cc  log4cplus.h  task_context.h  zk_client.cc  zk_client.h  zk_tools.cc  zk_tools.h
whale/docs/: Quick_start.md  Whale-config.md
whale/example/: CMakeLists.txt  conf.json  cthrift_async_example.cc  cthrift_cli_example.cc  cthrift_svr_example.cc
whale/example/echo/: Echo.cpp  Echo.h  Echo_async_server.skeleton.cpp  Echo_server.skeleton.cpp  echo_constants.cpp  echo_types.cpp  echo_types.h
whale/patch/: 0001-add-patch-for-http.patch
whale/thrid/include/mns_sdk/: mns_sdk.h  mns_worker.h  thrift_client.h
whale/thrid/include/mns_sdk/util/: mns_common.h  mns_config.h  mns_log.h  mns_sdk_common.h
whale/thrid/include/octoidl/: MNSCacheService.h  ServiceAgent.h  ThriftSpans_constants.h  ThriftSpans_types.h  mnsc_data_constants.h  mnsc_data_types.h  mnsc_service_constants.h  mnsc_service_types.h  naming_common_constants.h  naming_common_types.h  naming_data_constants.h  naming_data_types.h  naming_service_constants.h  naming_service_types.h  unified_protocol_constants.h  unified_protocol_types.h
whale/tool/: clear4git.sh
(+566 files in other folders)
